sdk-docs_versioned_docs/version-28.0.x/modules/API/Entities/Asset/Asset.md
---
id: "Asset"
title: "Module: Asset"
sidebar_label: "Asset"
---

## References

### ActiveTransferRestrictions

Re-exports [ActiveTransferRestrictions](../../../../interfaces/API/Entities/Asset/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)

___

### AgentWithGroup

Re-exports [AgentWithGroup](../../../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

___

### Asset

Re-exports [Asset](Types/Types.md#asset)

___

### AssetDetails

Re-exports [AssetDetails](../../../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

___

### AssetDocument

Re-exports [AssetDocument](../../../../interfaces/API/Entities/Asset/Types/AssetDocument/AssetDocument.md)

___

### AssetStat

Re-exports [AssetStat](../../../../interfaces/API/Entities/Asset/Types/AssetStat/AssetStat.md)

___

### AssetWithGroup

Re-exports [AssetWithGroup](../../../../interfaces/API/Entities/Asset/Types/AssetWithGroup/AssetWithGroup.md)

___

### BaseAsset

Re-exports [BaseAsset](../../../../classes/API/Entities/Asset/Base/BaseAsset/BaseAsset.md)

___

### BaseHistoricAssetTransaction

Re-exports [BaseHistoricAssetTransaction](../../../../interfaces/API/Entities/Asset/Types/BaseHistoricAssetTransaction/BaseHistoricAssetTransaction.md)

___

### CaCheckpointType

Re-exports [CaCheckpointType](../../../../enums/API/Entities/Asset/Fungible/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

___

### ClaimStatValue

Re-exports [ClaimStatValue](Types/Types.md#claimstatvalue)

___

### ClaimValue

Re-exports [ClaimValue](Types/Types.md#claimvalue)

___

### CollectionKey

Re-exports [CollectionKey](Types/Types.md#collectionkey)

___

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../../../interfaces/API/Entities/Asset/Fungible/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

___

### FungibleAsset

Re-exports [FungibleAsset](../../../../classes/API/Entities/Asset/Fungible/FungibleAsset.md)

___

### HeldNfts

Re-exports [HeldNfts](../../../../interfaces/API/Entities/Asset/Types/HeldNfts/HeldNfts.md)

___

### HistoricAgentOperation

Re-exports [HistoricAgentOperation](../../../../interfaces/API/Entities/Asset/Types/HistoricAgentOperation/HistoricAgentOperation.md)

___

### HistoricAssetTransaction

Re-exports [HistoricAssetTransaction](../../../../interfaces/API/Entities/Asset/Types/HistoricAssetTransaction/HistoricAssetTransaction.md)

___

### HistoricNftTransaction

Re-exports [HistoricNftTransaction](../../../../interfaces/API/Entities/Asset/Types/HistoricNftTransaction/HistoricNftTransaction.md)

___

### HumanReadable

Re-exports [HumanReadable](../../../../interfaces/API/Entities/Asset/NonFungible/Nft/HumanReadable/HumanReadable.md)

___

### IdentityBalance

Re-exports [IdentityBalance](../../../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

___

### IdentityHeldNfts

Re-exports [IdentityHeldNfts](../../../../interfaces/API/Entities/Asset/Types/IdentityHeldNfts/IdentityHeldNfts.md)

___

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](Fungible/Checkpoints/Types/Types.md#inputcacheckpoint)

___

### JurisdictionValue

Re-exports [JurisdictionValue](Types/Types.md#jurisdictionvalue)

___

### KnownAssetType

Re-exports [KnownAssetType](../../../../enums/API/Entities/Asset/Types/KnownAssetType/KnownAssetType.md)

___

### KnownNftType

Re-exports [KnownNftType](../../../../enums/API/Entities/Asset/Types/KnownNftType/KnownNftType.md)

___

### MetadataKeyId

Re-exports [MetadataKeyId](Types/Types.md#metadatakeyid)

___

### Nft

Re-exports [Nft](../../../../classes/API/Entities/Asset/NonFungible/Nft/Nft.md)

___

### NftCollection

Re-exports [NftCollection](../../../../classes/API/Entities/Asset/NonFungible/NftCollection/NftCollection.md)

___

### NftMetadata

Re-exports [NftMetadata](../../../../interfaces/API/Entities/Asset/Types/NftMetadata/NftMetadata.md)

___

### NftUniqueIdentifiers

Re-exports [NftUniqueIdentifiers](NonFungible/Nft/Nft.md#nftuniqueidentifiers)

___

### SecurityIdentifier

Re-exports [SecurityIdentifier](../../../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)

___

### SecurityIdentifierType

Re-exports [SecurityIdentifierType](../../../../enums/API/Entities/Asset/Types/SecurityIdentifierType/SecurityIdentifierType.md)

___

### TransferBreakdown

Re-exports [TransferBreakdown](../../../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

___

### TransferError

Re-exports [TransferError](../../../../enums/API/Entities/Asset/Types/TransferError/TransferError.md)

___

### TransferExemptKey

Re-exports [TransferExemptKey](../../../../interfaces/API/Entities/Asset/Types/TransferExemptKey/TransferExemptKey.md)

___

### TransferRestrictionExemption

Re-exports [TransferRestrictionExemption](../../../../interfaces/API/Entities/Asset/Types/TransferRestrictionExemption/TransferRestrictionExemption.md)

___

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

___

### TransferRestrictionStatValues

Re-exports [TransferRestrictionStatValues](../../../../interfaces/API/Entities/Asset/Types/TransferRestrictionStatValues/TransferRestrictionStatValues.md)

___

### TransferStatus

Re-exports [TransferStatus](../../../../enums/API/Entities/Asset/Types/TransferStatus/TransferStatus.md)

___

### UniqueIdentifiers

Re-exports [UniqueIdentifiers](../../../../interfaces/API/Entities/Asset/Types/UniqueIdentifiers/UniqueIdentifiers.md)

___

### VenueFilteringDetails

Re-exports [VenueFilteringDetails](../../../../interfaces/API/Entities/Asset/Types/VenueFilteringDetails/VenueFilteringDetails.md)
